--- a/CatsOrganizer/appsettings.json
+++ b/CatsOrganizer/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-UQ9GG8N;Database=CatsOrganizer;User ID=ss;Password=Stoppl,z9111994;Encrypt=false"
+    "DefaultConnection": "Server=server;Database=Cards;User ID=userId;Password=password;Encrypt=false"
   }
 }
